[build-system]
requires = [ "hatchling", "s3fs", "numpy" ]
build-backend = "hatchling.build"

[project]
name = "awsgnssroutils"
version = "1.0.1"
authors = [
	{ name="Stephen Leroy", email="sleroy@aer.com" },
	{ name="Amy McVey", email="amcvey@aer.com" }
	]
description = "Utilities for access and manipulation of GNSS radio occultation in the AWS Registry of Open Data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: BSD License",
	"Operating System :: OS Independent",
	]

[project.urls]
"Homepage" = "https://github.com/gnss-ro/aws-opendata"
"Bug Tracker" = "https://github.com/gnss-ro/aws-opendata/issues"
