[build-system]
# requires = [ "hatchling", "s3fs", "numpy", "tqdm" ]
requires = [ "hatchling>=1.22.2" ]
build-backend = "hatchling.build"

[project]
name = "awsgnssroutils"
version = "1.2.3"
authors = [
	{ name="Stephen Leroy", email="sleroy@aer.com" },
	{ name="Amy McVey", email="amcvey@aer.com" }
	]
description = "Utilities for access and manipulation of GNSS radio occultation in the AWS Registry of Open Data"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [ "hatchling", "awscli", "boto3", "tqdm", 
	"numpy", "pyhdf", "xarray", "astropy>=5.3", "pyerfa", "sgp4", "netCDF4<1.7.0", 
	"eumdac", "earthaccess", "aiobotocore[awscli,boto3]" ]
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: BSD License",
	"Operating System :: OS Independent"
	]

[project.urls]
"Homepage" = "https://github.com/gnss-ro/aws-opendata/tree/master/awsgnssroutils"
"Bug Tracker" = "https://github.com/gnss-ro/aws-opendata/issues"

[project.scripts]
rotcol = "awsgnssroutils.collocation.rotcol:main"

